# wfinfo-ng

./: .gitignore  Cargo.toml  README.md  update.sh
.github/actions/dependencies/: action.yml
.github/workflows/: pull-request.yml
WFI test images/: labels.json
src/: config.rs  database.rs  lib.rs  logs.rs  main.rs  ocr.rs  ocr_manual.rs  overlay.rs  statistics.rs  testing.rs  theme.rs  utils.rs  wfinfo_data.rs
