[package]
name = "wfinfo-ng"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wfinfo"
path = "src/lib.rs"

[[bin]]
name = "wfinfo"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.63"
approx = "0.5.1"
captrs = "0.3.1"
eframe = "0.19.0"
egui_extras = "0.19.0"
image = "0.24.3"
imageproc = "0.23.0"
indexmap = { version = "1.9.1", features = ["serde"] }
itertools = "0.10.5"
levenshtein = "1.0.5"
notify = "4.0.17"
ordered-float = { version = "3.0.0", features = ["serde"] }
palette = "0.6.1"
rayon = "1.5.3"
serde = { version = "1.0.144", features = ["serde_derive"] }
serde-aux = "3.1.0"
serde_json = "1.0.85"
tesseract = "0.12.0"
