[package]
name = "wfinfo-ng"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wfinfo"
path = "src/lib.rs"

[[bin]]
name = "wfinfo"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.80"
approx = "0.5.1"
clap = { version = "4.5.2", features = ["derive"] }
eframe = "0.27.1"
egui_extras = "0.26.2"
global-hotkey = "0.5.0"
image = "0.24.9"
indexmap = { version = "2.2.5", features = ["serde"] }
levenshtein = "1.0.5"
notify = "6.1.1"
notify-debouncer-full = "0.3.1"
notify-debouncer-mini = "0.4.1"
ordered-float = { version = "4.2.0", features = ["serde"] }
palette = "0.7.5"
rayon = "1.9.0"
rdev = "0.5.3"
serde = { version = "1.0.197", features = ["serde_derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.114"
tesseract = "0.15.1"
xcap = "0.0.4"
