[package]
name = "wfinfo-ng"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wfinfo"
path = "src/lib.rs"

[[bin]]
name = "wfinfo"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.63"
approx = "0.5.1"
clap = { version = "4.5.1", features = ["derive"] }
eframe = "0.19.0"
egui_extras = "0.19.0"
global-hotkey = "0.4.2"
image = { version = "0.24.9", features = ["exr"] }
indexmap = { version = "1.9.1", features = ["serde"] }
lazy_static = "1.4.0"
levenshtein = "1.0.5"
notify = "4.0.17"
ordered-float = { version = "3.0.0", features = ["serde"] }
palette = "0.6.1"
rayon = "1.5.3"
rdev = "0.5.3"
serde = { version = "1.0.144", features = ["serde_derive"] }
serde-aux = "3.1.0"
serde_json = "1.0.85"
tesseract = "0.12.0"
xcap = "0.0.4"
log = "0.4.22"
env_logger = "0.11.5"
bytemuck = { version = "1.13", features = ["derive"] }
